; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_audio.c_gx_audio_Init.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_audio.c_gx_audio_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"%s/Bg_music.ogg\00", align 1
@DEFAULT_PATH = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@Bg_music_ogg_size = common dso_local global i32 0, align 4
@Bg_music_ogg = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gx_audio_Init() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.stat, align 4
  %5 = call i32 (...) @ASND_Init()
  %6 = load i32, i32* @MAXPATHLEN, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %1, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %2, align 8
  %10 = load i8*, i8** @DEFAULT_PATH, align 8
  %11 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = call i32* @fopen(i8* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %31

15:                                               ; preds = %0
  %16 = call i32 @stat(i8* %9, %struct.stat* %4)
  %17 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* @Bg_music_ogg_size, align 4
  %19 = load i32, i32* @Bg_music_ogg_size, align 4
  %20 = call i64 @memalign(i32 32, i32 %19)
  store i64 %20, i64* @Bg_music_ogg, align 8
  %21 = load i64, i64* @Bg_music_ogg, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %15
  %24 = load i64, i64* @Bg_music_ogg, align 8
  %25 = load i32, i32* @Bg_music_ogg_size, align 4
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @fread(i64 %24, i32 1, i32 %25, i32* %26)
  br label %28

28:                                               ; preds = %23, %15
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 @fclose(i32* %29)
  br label %31

31:                                               ; preds = %28, %0
  %32 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %32)
  ret void
}

declare dso_local i32 @ASND_Init(...) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i64 @memalign(i32, i32) #1

declare dso_local i32 @fread(i64, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
